@@ -2,6 +2,9 @@ openssl (0.9.8c-4) unstable; urgency=low
 
  * Add German debconf translation.  Thanks to
    Johannes Starosta <feedback-an-johannes@arcor.de> (Closes: #388108)
+ * Make c_rehash look for both .pem and .crt files.  Also make it support
+   files in DER format.  Patch by "Yauheni Kaliuta" <y.kaliuta@gmail.com>
+   (Closes: #387089)
 
  -- Kurt Roeckx <kurt@roeckx.be>  Thu, 30 Nov 2006 20:57:46 +0000
 
